// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running a full aggregated birth FHIR bundle through resolvers produces a BirthRegistration object 1`] = `
Object {
  "fetchBirthRegistration": Object {
    "_fhirIDMap": Object {
      "composition": "09f39e17-ca23-4905-9ab3-f3649c4e3162",
      "encounter": "e7ed42ae-bd54-4d7c-ad9d-0af7506d1d64",
      "eventLocation": "565d957a-109a-4bf3-a3af-f0ad52c719cd",
      "observation": Object {
        "attendantAtBirth": "942901b9-e03f-4209-953d-fd094e5e8231",
        "birthType": "78e42deb-c50e-43c8-853f-71ccc6398512",
        "weightAtBirth": "d47d4a55-bf18-4704-ac3a-0066e3ecff6f",
      },
      "questionnaireResponse": undefined,
    },
    "attendantAtBirth": "PHYSICIAN",
    "birthType": "SINGLE",
    "child": Object {
      "_fhirID": null,
      "address": null,
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": "2023-07-11",
      "dateOfMarriage": null,
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": null,
      "exactDateOfBirthUnknown": null,
      "gender": "female",
      "id": "dfac3127-963e-4ef2-b875-3123e08da3d9",
      "identifier": Array [
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "2023B3VUXES",
          "otherType": null,
          "type": "BIRTH_REGISTRATION_NUMBER",
        },
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "",
          "otherType": null,
          "type": "BIRTH_CONFIGURABLE_IDENTIFIER_1",
        },
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "",
          "otherType": null,
          "type": "BIRTH_CONFIGURABLE_IDENTIFIER_2",
        },
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "",
          "otherType": null,
          "type": "BIRTH_CONFIGURABLE_IDENTIFIER_3",
        },
      ],
      "maritalStatus": null,
      "multipleBirth": null,
      "name": Array [
        Object {
          "familyName": "Baumbach",
          "firstNames": "Isadore",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": null,
      "occupation": null,
      "photo": null,
      "reasonNotApplying": null,
      "telecom": null,
    },
    "childrenBornAliveToMother": null,
    "createdAt": "2023-08-11T05:26:26.000Z",
    "eventLocation": Object {
      "_fhirID": null,
      "address": null,
      "altitude": null,
      "description": null,
      "geoData": null,
      "id": "565d957a-109a-4bf3-a3af-f0ad52c719cd",
      "latitude": null,
      "longitude": null,
      "name": "Keembe Rural Health Centre",
      "partOf": "Location/e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
      "status": "active",
      "telecom": null,
      "type": "HEALTH_FACILITY",
    },
    "father": Object {
      "_fhirID": null,
      "address": Array [
        Object {
          "city": "South Jamelmouth",
          "country": "FAR",
          "district": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "districtName": "Ibombo",
          "from": null,
          "line": Array [
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
          ],
          "lineName": Array [
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
          ],
          "postalCode": "34422-6447",
          "state": "1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "stateName": "Central",
          "text": null,
          "to": null,
          "type": "PRIMARY_ADDRESS",
          "use": null,
        },
      ],
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": "2003-07-11",
      "dateOfMarriage": "2021-07-11",
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": "POST_SECONDARY_ISCED_4",
      "exactDateOfBirthUnknown": null,
      "gender": null,
      "id": "3ee05cf9-a550-4d7f-abde-54313f7bd41a",
      "identifier": Array [
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "8762475961",
          "otherType": null,
          "type": "NATIONAL_ID",
        },
      ],
      "maritalStatus": "MARRIED",
      "multipleBirth": null,
      "name": Array [
        Object {
          "familyName": "Neil",
          "firstNames": "Baumbach",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": Array [
        "FAR",
      ],
      "occupation": "Bookkeeper",
      "photo": null,
      "reasonNotApplying": null,
      "telecom": null,
    },
    "foetalDeathsToMother": null,
    "history": Array [
      Object {
        "certificates": Array [
          null,
        ],
        "comments": Array [],
        "date": "2023-10-11T07:24:55.108Z",
        "dhis2Notification": false,
        "duplicateOf": null,
        "hasShowedVerifiedDocument": false,
        "input": Array [],
        "ipAddress": null,
        "location": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": null,
          "geoData": null,
          "id": "c1ddb556-8b22-4182-9a6c-64358c0e96c9",
          "latitude": null,
          "longitude": null,
          "name": "HPGiE9Jjh2r",
          "partOf": "Location/0",
          "status": "active",
          "telecom": null,
          "type": "CRVS_OFFICE",
        },
        "noSupportingDocumentationRequired": false,
        "note": "",
        "office": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": null,
          "geoData": null,
          "id": "5faf414c-99e8-47a7-b4d9-d07a02dbc97e",
          "latitude": null,
          "longitude": null,
          "name": "Ilanga District Office",
          "partOf": "Location/c1ddb556-8b22-4182-9a6c-64358c0e96c9",
          "status": "active",
          "telecom": null,
          "type": "CRVS_OFFICE",
        },
        "otherReason": "",
        "output": Array [],
        "payment": null,
        "reason": null,
        "requester": "",
        "requesterOther": "",
        "signature": null,
        "statusReason": null,
        "system": null,
        "user": null,
      },
      Object {
        "certificates": Array [
          null,
        ],
        "comments": Array [],
        "date": "2023-10-02T13:51:55.645+00:00",
        "dhis2Notification": false,
        "duplicateOf": null,
        "hasShowedVerifiedDocument": false,
        "input": Array [],
        "ipAddress": null,
        "location": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": "oEBf29y8JP8",
          "geoData": null,
          "id": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "latitude": null,
          "longitude": null,
          "name": "Ibombo",
          "partOf": "Location/1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "status": "active",
          "telecom": null,
          "type": "ADMIN_STRUCTURE",
        },
        "noSupportingDocumentationRequired": false,
        "note": "",
        "office": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": null,
          "geoData": null,
          "id": "e9e1b362-27c9-4ce1-82ad-57fe9d5650e4",
          "latitude": null,
          "longitude": null,
          "name": "Ibombo District Office",
          "partOf": "Location/e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "status": "active",
          "telecom": null,
          "type": "CRVS_OFFICE",
        },
        "otherReason": "",
        "output": Array [],
        "payment": null,
        "reason": null,
        "requester": "",
        "requesterOther": "",
        "signature": null,
        "statusReason": null,
        "system": null,
        "user": null,
      },
    ],
    "id": "09f39e17-ca23-4905-9ab3-f3649c4e3162",
    "informant": Object {
      "_fhirID": null,
      "_fhirIDPatient": "cd5693ed-dd33-4c3a-a9fc-7479b132a4ea",
      "address": Array [
        Object {
          "city": "South Jamelmouth",
          "country": "FAR",
          "district": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "districtName": "Ibombo",
          "from": null,
          "line": Array [
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
          ],
          "lineName": Array [
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
          ],
          "postalCode": "34422-6447",
          "state": "1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "stateName": "Central",
          "text": null,
          "to": null,
          "type": "PRIMARY_ADDRESS",
          "use": null,
        },
      ],
      "affidavit": null,
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": "2003-07-11",
      "dateOfMarriage": "2021-07-11",
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": "POST_SECONDARY_ISCED_4",
      "exactDateOfBirthUnknown": null,
      "gender": null,
      "id": "a0fd7881-33e6-4751-a346-78f820aa3dbb",
      "identifier": Array [
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "2253499797",
          "otherType": null,
          "type": "NATIONAL_ID",
        },
      ],
      "maritalStatus": "MARRIED",
      "multipleBirth": 2,
      "name": Array [
        Object {
          "familyName": "Baumbach",
          "firstNames": "Sophia",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": Array [
        "FAR",
      ],
      "occupation": "Farmer",
      "otherRelationship": null,
      "photo": null,
      "reasonNotApplying": null,
      "relationship": "MOTHER",
      "telecom": null,
    },
    "lastPreviousLiveBirth": null,
    "mother": Object {
      "_fhirID": null,
      "address": Array [
        Object {
          "city": "South Jamelmouth",
          "country": "FAR",
          "district": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "districtName": "Ibombo",
          "from": null,
          "line": Array [
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
          ],
          "lineName": Array [
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
            "12",
            "Usual Street",
            "Usual Residental Area",
            "",
            "",
            "URBAN",
          ],
          "postalCode": "34422-6447",
          "state": "1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "stateName": "Central",
          "text": null,
          "to": null,
          "type": "PRIMARY_ADDRESS",
          "use": null,
        },
      ],
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": "2003-07-11",
      "dateOfMarriage": "2021-07-11",
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": "POST_SECONDARY_ISCED_4",
      "exactDateOfBirthUnknown": null,
      "gender": null,
      "id": "cd5693ed-dd33-4c3a-a9fc-7479b132a4ea",
      "identifier": Array [
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "2253499797",
          "otherType": null,
          "type": "NATIONAL_ID",
        },
      ],
      "maritalStatus": "MARRIED",
      "multipleBirth": 2,
      "name": Array [
        Object {
          "familyName": "Baumbach",
          "firstNames": "Sophia",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": Array [
        "FAR",
      ],
      "occupation": "Farmer",
      "photo": null,
      "reasonNotApplying": null,
      "telecom": Array [
        Object {
          "system": "phone",
          "use": null,
          "value": "+260711384538",
        },
      ],
    },
    "otherAttendantAtBirth": null,
    "questionnaire": null,
    "registration": Object {
      "_fhirID": null,
      "assignment": Object {
        "avatarURL": "/mock-presigned-url",
        "firstName": "Derrick",
        "lastName": "Bulaya",
        "officeName": "",
        "userId": "6501acbe81245ece9e627bf7",
      },
      "attachments": null,
      "book": null,
      "brideSignature": null,
      "brideSignatureURI": null,
      "certificates": Array [
        null,
      ],
      "contact": "MOTHER",
      "contactEmail": "Sophia.Baumbach95@gmail.com",
      "contactPhoneNumber": "+260711384538",
      "contactRelationship": null,
      "draftId": null,
      "duplicates": null,
      "groomSignature": null,
      "groomSignatureURI": null,
      "id": "358c0c75-9855-4812-b560-c1b5fbf48e5a",
      "inCompleteFields": null,
      "informantType": "MOTHER",
      "informantsSignature": null,
      "informantsSignatureURI": null,
      "mosipAid": null,
      "otherInformantType": null,
      "page": null,
      "paperFormID": null,
      "registrationNumber": "2023B3VUXES",
      "status": Array [
        Object {
          "comments": null,
          "id": "358c0c75-9855-4812-b560-c1b5fbf48e5a",
          "location": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": null,
            "geoData": null,
            "id": "c1ddb556-8b22-4182-9a6c-64358c0e96c9",
            "latitude": null,
            "longitude": null,
            "name": "HPGiE9Jjh2r",
            "partOf": "Location/0",
            "status": "active",
            "telecom": null,
            "type": "CRVS_OFFICE",
          },
          "office": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": null,
            "geoData": null,
            "id": "5faf414c-99e8-47a7-b4d9-d07a02dbc97e",
            "latitude": null,
            "longitude": null,
            "name": "Ilanga District Office",
            "partOf": "Location/c1ddb556-8b22-4182-9a6c-64358c0e96c9",
            "status": "active",
            "telecom": null,
            "type": "CRVS_OFFICE",
          },
          "reason": null,
          "timeLogged": null,
          "timestamp": "2023-10-11T07:24:55.108Z",
          "user": null,
        },
        Object {
          "comments": null,
          "id": "358c0c75-9855-4812-b560-c1b5fbf48e5a",
          "location": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": "oEBf29y8JP8",
            "geoData": null,
            "id": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
            "latitude": null,
            "longitude": null,
            "name": "Ibombo",
            "partOf": "Location/1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
            "status": "active",
            "telecom": null,
            "type": "ADMIN_STRUCTURE",
          },
          "office": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": null,
            "geoData": null,
            "id": "e9e1b362-27c9-4ce1-82ad-57fe9d5650e4",
            "latitude": null,
            "longitude": null,
            "name": "Ibombo District Office",
            "partOf": "Location/e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
            "status": "active",
            "telecom": null,
            "type": "CRVS_OFFICE",
          },
          "reason": null,
          "timeLogged": null,
          "timestamp": "2023-10-02T13:51:55.410Z",
          "user": null,
        },
      ],
      "trackingId": "B3VUXES",
      "witnessOneSignature": null,
      "witnessOneSignatureURI": null,
      "witnessTwoSignature": null,
      "witnessTwoSignatureURI": null,
    },
    "updatedAt": null,
    "weightAtBirth": 4.1,
  },
}
`;

exports[`running a full aggregated birth FHIR bundle through resolvers produces a DeathRegistration object 1`] = `
Object {
  "fetchDeathRegistration": Object {
    "_fhirIDMap": Object {
      "composition": "a959c616-934a-4139-a123-37bb4a1be39e",
      "encounter": "e668f0dc-aacd-45be-bd5f-2a81c3161593",
      "eventLocation": "4ba43b39-547b-41a8-8af1-c515786f36e5",
      "observation": Object {
        "causeOfDeath": "3cae74a3-042c-4faf-9dde-8b716d094033",
        "causeOfDeathEstablished": "fb98ff5b-3aa1-40c2-87bf-4bd6df091dd2",
        "causeOfDeathMethod": "ff9a538b-c551-4edc-9631-fa2169a37f20",
        "deathDescription": "d5c9d991-69c1-4269-baec-77b5667f2eea",
        "femaleDependentsOfDeceased": "fbaa8c21-2b9f-48c7-bb09-b15911685b31",
        "maleDependentsOfDeceased": "5965002b-52a6-40b4-b95e-5e84b48e3042",
        "mannerOfDeath": "3d196967-7c4a-4807-ad42-13b4b2ca43a3",
      },
      "questionnaireResponse": undefined,
    },
    "causeOfDeath": "Natural cause",
    "causeOfDeathEstablished": "true",
    "causeOfDeathMethod": "PHYSICIAN",
    "createdAt": "2023-08-16T06:55:19.000Z",
    "deathDescription": null,
    "deceased": Object {
      "_fhirID": null,
      "address": Array [
        Object {
          "city": "Rudyboro",
          "country": "FAR",
          "district": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "districtName": "Ibombo",
          "from": null,
          "line": Array [
            "44444 Predovic Mount",
            "87740",
            "URBAN",
            "",
            "",
            "URBAN",
          ],
          "lineName": Array [
            "44444 Predovic Mount",
            "87740",
            "URBAN",
            "",
            "",
            "URBAN",
          ],
          "postalCode": "09840-0103",
          "state": "1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "stateName": "Central",
          "text": null,
          "to": null,
          "type": "PRIMARY_ADDRESS",
          "use": null,
        },
      ],
      "age": 75,
      "ageOfIndividualInYears": null,
      "birthDate": "1948-07-24",
      "dateOfMarriage": null,
      "deceased": Object {
        "deathDate": "2023-07-24",
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": null,
      "exactDateOfBirthUnknown": null,
      "gender": "female",
      "id": "d55283fe-b5bc-497d-86f3-5370957b0642",
      "identifier": Array [
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "8360781537",
          "otherType": null,
          "type": "NATIONAL_ID",
        },
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "565195261",
          "otherType": null,
          "type": "SOCIAL_SECURITY_NO",
        },
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "2023DL1W8FV",
          "otherType": null,
          "type": "DEATH_REGISTRATION_NUMBER",
        },
      ],
      "maritalStatus": "MARRIED",
      "multipleBirth": null,
      "name": Array [
        Object {
          "familyName": "Pacocha",
          "firstNames": "Zack",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": Array [
        "FAR",
      ],
      "occupation": null,
      "photo": null,
      "reasonNotApplying": null,
      "telecom": null,
    },
    "eventLocation": Object {
      "_fhirID": null,
      "address": null,
      "altitude": null,
      "description": null,
      "geoData": null,
      "id": "4ba43b39-547b-41a8-8af1-c515786f36e5",
      "latitude": null,
      "longitude": null,
      "name": "Golden Valley Rural Health Centre",
      "partOf": "Location/e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
      "status": "active",
      "telecom": null,
      "type": "HEALTH_FACILITY",
    },
    "father": Object {
      "_fhirID": null,
      "address": null,
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": null,
      "dateOfMarriage": null,
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": null,
      "exactDateOfBirthUnknown": null,
      "gender": null,
      "id": "d89b25da-edd5-4941-b2dd-84e93868c1a7",
      "identifier": null,
      "maritalStatus": null,
      "multipleBirth": null,
      "name": Array [
        Object {
          "familyName": "Pacocha",
          "firstNames": "",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": null,
      "occupation": null,
      "photo": null,
      "reasonNotApplying": null,
      "telecom": null,
    },
    "femaleDependentsOfDeceased": 4,
    "history": Array [
      Object {
        "certificates": Array [],
        "comments": Array [],
        "date": "2023-10-11T07:24:55.108Z",
        "dhis2Notification": false,
        "duplicateOf": null,
        "hasShowedVerifiedDocument": false,
        "input": Array [],
        "ipAddress": null,
        "location": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": null,
          "geoData": null,
          "id": "c1ddb556-8b22-4182-9a6c-64358c0e96c9",
          "latitude": null,
          "longitude": null,
          "name": "HPGiE9Jjh2r",
          "partOf": "Location/0",
          "status": "active",
          "telecom": null,
          "type": "CRVS_OFFICE",
        },
        "noSupportingDocumentationRequired": false,
        "note": "",
        "office": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": null,
          "geoData": null,
          "id": "5faf414c-99e8-47a7-b4d9-d07a02dbc97e",
          "latitude": null,
          "longitude": null,
          "name": "Ilanga District Office",
          "partOf": "Location/c1ddb556-8b22-4182-9a6c-64358c0e96c9",
          "status": "active",
          "telecom": null,
          "type": "CRVS_OFFICE",
        },
        "otherReason": "",
        "output": Array [],
        "payment": null,
        "reason": null,
        "requester": "",
        "requesterOther": "",
        "signature": null,
        "statusReason": null,
        "system": null,
        "user": null,
      },
      Object {
        "certificates": Array [],
        "comments": Array [],
        "date": "2023-09-22T11:52:48.611+00:00",
        "dhis2Notification": false,
        "duplicateOf": null,
        "hasShowedVerifiedDocument": false,
        "input": Array [],
        "ipAddress": null,
        "location": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": "oEBf29y8JP8",
          "geoData": null,
          "id": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "latitude": null,
          "longitude": null,
          "name": "Ibombo",
          "partOf": "Location/1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "status": "active",
          "telecom": null,
          "type": "ADMIN_STRUCTURE",
        },
        "noSupportingDocumentationRequired": false,
        "note": "",
        "office": Object {
          "_fhirID": null,
          "address": null,
          "altitude": null,
          "description": null,
          "geoData": null,
          "id": "e9e1b362-27c9-4ce1-82ad-57fe9d5650e4",
          "latitude": null,
          "longitude": null,
          "name": "Ibombo District Office",
          "partOf": "Location/e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "status": "active",
          "telecom": null,
          "type": "CRVS_OFFICE",
        },
        "otherReason": "",
        "output": Array [],
        "payment": null,
        "reason": null,
        "requester": "",
        "requesterOther": "",
        "signature": null,
        "statusReason": null,
        "system": null,
        "user": null,
      },
    ],
    "id": "a959c616-934a-4139-a123-37bb4a1be39e",
    "informant": Object {
      "_fhirID": null,
      "_fhirIDPatient": "9fbbb561-dd3c-4b9f-8765-829a4c75493e",
      "address": Array [
        Object {
          "city": "New Julio",
          "country": "FAR",
          "district": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
          "districtName": "Ibombo",
          "from": null,
          "line": Array [
            "817 Avis Point",
            "06074",
            "URBAN",
            "",
            "",
            "URBAN",
          ],
          "lineName": Array [
            "817 Avis Point",
            "06074",
            "URBAN",
            "",
            "",
            "URBAN",
          ],
          "postalCode": "24575",
          "state": "1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
          "stateName": "Central",
          "text": null,
          "to": null,
          "type": "PRIMARY_ADDRESS",
          "use": null,
        },
      ],
      "affidavit": null,
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": "2003-08-16",
      "dateOfMarriage": null,
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": null,
      "exactDateOfBirthUnknown": null,
      "gender": null,
      "id": "7106d752-1e34-47fe-8726-a9fd11042a4d",
      "identifier": Array [
        Object {
          "fieldsModifiedByIdentity": null,
          "id": "2464716794",
          "otherType": null,
          "type": "NATIONAL_ID",
        },
      ],
      "maritalStatus": null,
      "multipleBirth": null,
      "name": Array [
        Object {
          "familyName": "Pacocha",
          "firstNames": "Frank",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": Array [
        "FAR",
      ],
      "occupation": "consultant",
      "otherRelationship": null,
      "photo": null,
      "reasonNotApplying": null,
      "relationship": "SPOUSE",
      "telecom": null,
    },
    "maleDependentsOfDeceased": 3,
    "mannerOfDeath": "NATURAL_CAUSES",
    "medicalPractitioner": null,
    "mother": Object {
      "_fhirID": null,
      "address": null,
      "age": null,
      "ageOfIndividualInYears": null,
      "birthDate": null,
      "dateOfMarriage": null,
      "deceased": Object {
        "deathDate": null,
        "deceased": null,
      },
      "detailsExist": true,
      "educationalAttainment": null,
      "exactDateOfBirthUnknown": null,
      "gender": null,
      "id": "977cee5f-ebbf-4744-a184-ccba8d919d1c",
      "identifier": null,
      "maritalStatus": null,
      "multipleBirth": null,
      "name": Array [
        Object {
          "familyName": "Pacocha",
          "firstNames": "",
          "marriedLastName": null,
          "use": "en",
        },
      ],
      "nationality": null,
      "occupation": null,
      "photo": null,
      "reasonNotApplying": null,
      "telecom": null,
    },
    "questionnaire": null,
    "registration": Object {
      "_fhirID": null,
      "assignment": Object {
        "avatarURL": "/mock-presigned-url",
        "firstName": "Derrick",
        "lastName": "Bulaya",
        "officeName": "",
        "userId": "6501acbe81245ece9e627bf7",
      },
      "attachments": Array [
        Object {
          "_fhirID": null,
          "contentType": "image/png",
          "createdAt": null,
          "data": "/mock-presigned-url",
          "description": null,
          "id": "5e642507-570d-4ba2-99e9-20e962376152",
          "originalFileName": null,
          "status": "current",
          "subject": "INFORMANT_ID_PROOF",
          "systemFileName": null,
          "type": "OTHER",
          "uri": "/ocrvs/d40e904b-53ff-4639-bdcf-a2ba8fb236f5.png",
        },
        Object {
          "_fhirID": null,
          "contentType": "image/png",
          "createdAt": null,
          "data": "/mock-presigned-url",
          "description": null,
          "id": "f0d0ff44-1dc5-435e-a8cf-7a11fb8fc663",
          "originalFileName": null,
          "status": "current",
          "subject": "DECEASED_ID_PROOF",
          "systemFileName": null,
          "type": "NATIONAL_ID",
          "uri": "/ocrvs/02b19c1f-a9d7-4135-afe4-e80ea9d5100e.png",
        },
      ],
      "book": null,
      "brideSignature": null,
      "brideSignatureURI": null,
      "certificates": Array [],
      "contact": "SPOUSE",
      "contactEmail": "Frank24@gmail.com",
      "contactPhoneNumber": "+260734085893",
      "contactRelationship": null,
      "draftId": null,
      "duplicates": null,
      "groomSignature": null,
      "groomSignatureURI": null,
      "id": "b1a6925a-47ae-431e-8f61-4cd0929e8518",
      "inCompleteFields": null,
      "informantType": "SPOUSE",
      "informantsSignature": null,
      "informantsSignatureURI": null,
      "mosipAid": null,
      "otherInformantType": null,
      "page": null,
      "paperFormID": null,
      "registrationNumber": "2023DL1W8FV",
      "status": Array [
        Object {
          "comments": null,
          "id": "b1a6925a-47ae-431e-8f61-4cd0929e8518",
          "location": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": null,
            "geoData": null,
            "id": "c1ddb556-8b22-4182-9a6c-64358c0e96c9",
            "latitude": null,
            "longitude": null,
            "name": "HPGiE9Jjh2r",
            "partOf": "Location/0",
            "status": "active",
            "telecom": null,
            "type": "CRVS_OFFICE",
          },
          "office": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": null,
            "geoData": null,
            "id": "5faf414c-99e8-47a7-b4d9-d07a02dbc97e",
            "latitude": null,
            "longitude": null,
            "name": "Ilanga District Office",
            "partOf": "Location/c1ddb556-8b22-4182-9a6c-64358c0e96c9",
            "status": "active",
            "telecom": null,
            "type": "CRVS_OFFICE",
          },
          "reason": null,
          "timeLogged": null,
          "timestamp": "2023-10-11T07:24:55.108Z",
          "user": null,
        },
        Object {
          "comments": null,
          "id": "b1a6925a-47ae-431e-8f61-4cd0929e8518",
          "location": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": "oEBf29y8JP8",
            "geoData": null,
            "id": "e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
            "latitude": null,
            "longitude": null,
            "name": "Ibombo",
            "partOf": "Location/1cfe40fa-7b43-4c1e-aa05-4281e5122d9b",
            "status": "active",
            "telecom": null,
            "type": "ADMIN_STRUCTURE",
          },
          "office": Object {
            "_fhirID": null,
            "address": null,
            "altitude": null,
            "description": null,
            "geoData": null,
            "id": "e9e1b362-27c9-4ce1-82ad-57fe9d5650e4",
            "latitude": null,
            "longitude": null,
            "name": "Ibombo District Office",
            "partOf": "Location/e66643ac-9ea9-4314-b842-f4fb3ad9e83a",
            "status": "active",
            "telecom": null,
            "type": "CRVS_OFFICE",
          },
          "reason": null,
          "timeLogged": null,
          "timestamp": "2023-09-22T11:52:48.439Z",
          "user": null,
        },
      ],
      "trackingId": "DL1W8FV",
      "witnessOneSignature": null,
      "witnessOneSignatureURI": null,
      "witnessTwoSignature": null,
      "witnessTwoSignatureURI": null,
    },
    "spouse": null,
    "updatedAt": null,
  },
}
`;
